# transaction-system

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: linting.yml
apps/tests/: test_wallet.py
apps/wallet/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/wallet/fixtures/: initial_data.json
apps/wallet/migrations/: 0001_initial.py
config/: settings.py  urls.py  yasg.py
nginx/: nginx.conf
